task8 fix container"stretch"

--- a/task8/style.css
+++ b/task8/style.css
@@ -106,7 +106,7 @@ input{
 }
 .body_container{
     display: flex;
-
+    flex: 1 1 auto;
     justify-content: center;
     align-items: center;
     flex-direction: column;
